<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/urzadzenia_domowe"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Autor: 12345678901"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/pralka" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pralka"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/editTextNumber_nr_prania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/SkyBlue"
                android:ems="10"
                android:hint="@string/podaj_nr_prania"
                android:inputType="number"
                android:textColor="@color/Navy"
                android:textColorHint="@color/Navy" />

            <Button
                android:id="@+id/button_zatwierdz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/RoyalBlue"
                android:text="@string/zatwierdz" />

            <TextView
                android:id="@+id/textView_nr_prania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numer_prania_nie_podano" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/odkurzacz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/odkurzacz"
                android:textSize="23sp" />


            <Button
                android:id="@+id/button_wlacz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/RoyalBlue"
                android:text="@string/wlacz" />

            <TextView
                android:id="@+id/textView_odkurzacz_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/odkurzacz_wylaczony" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_naladowany" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>